--- a/styles/contact.css
+++ b/styles/contact.css
@@ -83,7 +83,8 @@
     font-size: 50px;
   }
   .content p {
-    font-size: 16px;
+    line-height: 24px;
+    font-size: 18px;
   }
   .button-container {
     flex-direction: column;
