--- a/styles/footer.css
+++ b/styles/footer.css
@@ -24,4 +24,9 @@ footer a {
     color: white;
     font-size: 20px;
     text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+
+footer a:hover {
+    color: var(--accent);
 }
