--- a/styles/introduction.css
+++ b/styles/introduction.css
@@ -1,9 +1,5 @@
 .introduction {
-  padding: 175px 50px 0;
-}
-
-.introduction h1 {
-  margin-bottom: 120px;
+  padding: 160px 50px 0;
 }
 
 .introduction span {
@@ -57,7 +53,18 @@
   }
 
   .intro-description {
-    line-height: 20px;
-    font-size: 16px;
+    line-height: 24px;
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .introduction {
+    padding: 200px 30px 0;
+  }
+
+  .introduction h1 {
+    font-size: 35px;
+    margin-bottom: 80px;
   }
 }
