--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,8 @@ html {
 }
 
 h1 {
-  font-size: 90px;
+  margin-bottom: 60px;
+  font-size: 105px;
   font-family: var(--font);
 }
 
@@ -40,3 +41,21 @@ p {
   font-size: 20px;
 }
 
+@media only screen and (max-width: 1000px) {
+  h1 {
+    font-size: 70px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  h1 {
+    font-size: 35px;
+    margin-bottom: 80px;
+  }
+}
