--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,10 +1,11 @@
-header {
+#header {
   position: fixed;
   top: 0;
   padding: 0 50px;
   width: 100%;
   height: 140px;
   background-color: black;
+  z-index: 10;
 }
 
 nav {
@@ -70,7 +71,7 @@ nav {
 }
 
 @media only screen and (max-width: 768px) {
-  header {
+  #header {
     height: 110px;
     padding: 0 30px;
   }
