--- a/styles/projects.css
+++ b/styles/projects.css
@@ -56,3 +56,9 @@ img {
     padding: 0 35px;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .project-container p {
+    font-size: 16px;
+  }
+}
