--- a/styles/single-project.css
+++ b/styles/single-project.css
@@ -1,69 +1,139 @@
-main {
-    padding: 140px 50px 35px;
+.hero {
+  padding: 140px 50px 35px;
 }
 
 .back-home {
-    font-size: 18px;
-    color: white;
-    opacity: .5;
-    font-family: var(--font);
-    text-decoration: none;
+  font-size: 18px;
+  color: white;
+  opacity: 0.5;
+  font-family: var(--font);
+  text-decoration: none;
 }
 
 .label {
-    margin-top: 25px;
-    color: var(--accent);
-    font-family: var(--font);
-    font-size: 30px;
+  margin-top: 25px;
+  color: var(--accent);
+  font-family: var(--font);
+  font-size: 30px;
 }
 
 h1 {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
 p {
-    max-width: 700px;
-  }
+  max-width: 700px;
+}
 
+.meta-data {
+  display: flex;
+  gap: 50px;
+  justify-content: space-between;
+  margin: 35px 0 50px;
+  align-items: center;
+}
+
+.left {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.meta-data span {
+  display: block;
+  padding: 15px 25px;
+  font-size: 18px;
+  font-family: var(--font);
+  color: white;
+  background-color: rgb(13, 13, 13);
+  border-radius: 100px;
+}
+
+.right {
+  width: 300px;
+}
+
+.right .button {
+  width: 100%;
+}
+
+.button {
+  border-radius: 100px;
+  min-width: 100%;
+  padding: 20px 40px;
+  font-family: var(--font);
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+}
+
+.primary {
+  background-color: transparent;
+  border: 1px solid var(--accent);
+  color: var(--accent);
+  background-color: rgb(20, 25, 0);
+}
+
+.secondary {
+  background-color: rgb(13, 13, 13);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  color: white;
+}
+
+main {
+  padding: 0 50px;
+}
+
+main img {
+  width: 100%;
+}
+
+main .content {
+  padding: 25px 0;
+}
+
+.row-single-image {
+  width: 100%;
+  padding: 25px 0;
+}
+
+.row-double-image, .row-triple-image {
+  display: grid;
+  gap: 50px;
+  padding: 25px 0;
+}
+
+.row-double-image {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.row-triple-image {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+@media only screen and (max-width: 1000px) {
   .meta-data {
-    display: flex;
-    justify-content: space-between;
-    margin: 35px 0 50px;
-  }
-  
-  .meta-data span {
-    padding: 15px 25px;
-    font-size: 18px;
-    font-family: var(--font);
-    color: white;
-    background-color: rgb(13, 13, 13);
-    border-radius: 100px;
+    gap: 50px;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .right {
-    width: 300px;
+    width: 100%;
   }
 
-  .button {
-    border-radius: 100px;
-    min-width: 100%;
-    padding: 20px 0;
-    font-family: var(--font);
-    font-size: 18px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
+  .right .button {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .row-double-image {
+    grid-template-columns: 1fr;
   }
   
-  .primary {
-    background-color: transparent;
-    border: 1px solid var(--accent);
-    color: var(--accent);
-    background-color: rgb(20, 25, 0);
+  .row-triple-image {
+    grid-template-columns: 1fr;
   }
-  
-  .secondary {
-    background-color: rgb(13, 13, 13);
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    color: white;
-  }
+}
