--- a/styles/project-cta.css
+++ b/styles/project-cta.css
@@ -7,12 +7,14 @@
     font-size: 18px;
     margin-bottom: 10px;
     color: var(--accent);
+    font-family: var(--font);
 }
 
 a.shimmer {
   color: var(--white);
   text-decoration: none;
   font-size: 40px;
+  font-family: var(--font);
 }
 a.shimmer:hover span {
   -webkit-animation: shimmer 2s infinite;
