--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: Inju, sans-serif;
   font-weight: 300;
 }
 
