--- a/styles/single-project.css
+++ b/styles/single-project.css
@@ -144,6 +144,10 @@ figure.row-triple-image {
   margin-bottom: 50px;
 }
 
+.flex-end {
+  align-items: flex-end;
+}
+
 @media only screen and (max-width: 1000px) {
   .meta-data {
     gap: 50px;
