--- a/styles/nav.css
+++ b/styles/nav.css
@@ -4,7 +4,7 @@
   padding: 0 50px;
   width: 100%;
   height: 140px;
-  background-color: black;
+  background-color: var(--black);
   z-index: 10;
   transition: all 0.3s ease-in-out;
 }
