--- a/styles/nav.css
+++ b/styles/nav.css
@@ -16,6 +16,17 @@ nav {
   justify-content: space-between;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 .logo {
   width: 40px;
   margin-right: auto;
